--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <header><a href="/index.html">Patrick Rymar</a></header>
-        <nav></nav>
+        <header><a href="/home.html">Patrick Rymar</a></header>
+        <nav>
             <a href="/blog.html">Blog</a>
+            <a href="/podcast.html">Podcast</a>
             <a href="/contact.html">Contact</a>
+            <a href="/shop.html">Shop</a>
             <a href="/about.html">About</a>
         </nav>
         <hr>
