--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>403 Forbidden</title>
-    <style>
-        a { color: #000000; text-decoration: none;}
-        a:hover { text-decoration: none; color: #000000;}
-    </style>
+    <title>Patrick Rymar | Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Error 403 - Forbidden</h1>
-    <hr>
-    <p>You don't have permission to access this server<a href="home.html">.</a></p>
+        <header><a href="/home.html">Patrick Rymar</a></header>
+        <nav>
+            <a href="/blog.html">Blog</a>
+            <a href="/projects.html">Projects</a>
+            <a href="/contact.html">Contact</a>
+            <a href="/shop.html">Shop</a>
+            <a href="/about.html">About</a>
+        </nav>
+        <hr>
+        <p>Welcome, I'm Patrick.</p>
+        <p>Thanks for visiting my website.</p>
 </body>
 </html>
