--- a/shop.html
+++ b/shop.html
@@ -10,7 +10,7 @@
         <header><a href="/home.html">Patrick Rymar</a></header>
         <nav>
             <a href="/blog.html">Blog</a>
-            <a href="/podcast.html">Podcast</a>
+            <a href="/projects.html">Projects</a>
             <a href="/contact.html">Contact</a>
             <a href="/shop.html">Shop</a>
             <a href="/about.html">About</a>
