--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <header><a href="/home.html">Patrick Rymar</a></header>
+        <header><a href="/index.html">Patrick Rymar</a></header>
         <nav>
             <a href="/blog.html">Blog</a>
             <a href="/projects.html">Projects</a>
