--- a/blog.html
+++ b/blog.html
@@ -17,9 +17,6 @@
         </nav>
         <hr>
         <h1>Blog</h1>
-        <p><a href="lesmis.html">Join my book club!</a><br>
-            <small>09 Nov 2024</small></p>
-        <p><a href="index.html">My first post will go here.</a><br>
-            <small>07 Nov 2024</small></p>
+        <p>Coming soon...</p>
 </body>
 </html>
