--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,8 @@
         </nav>
         <hr>
         <h1>Contact</h1>
-        <p>Email me:<br>
-            <code>hello@patrickrymar.com</code></p>
+        <p>Email me:
+        <br>
+        hello@patrickrymar.com</p>
 </body>
 </html>
