--- a/shop.html
+++ b/shop.html
@@ -17,6 +17,6 @@
         </nav>
         <hr>
         <h1>Shop</h1>
-        <p>Sorry, there is nothing for sale.</p>
+        <p>Coming soon... 🌱</p>
 </body>
 </html>
