--- a/index.html
+++ b/index.html
@@ -2,21 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Patrick Rymar | Home</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Patrick Rymar</title>
 </head>
 <body>
-        <header><a href="/index.html">Patrick Rymar</a></header>
-        <nav>
-            <a href="/blog.html">Blog</a>
-            <a href="/projects.html">Projects</a>
-            <a href="/contact.html">Contact</a>
-            <a href="/shop.html">Shop</a>
-            <a href="/about.html">About</a>
-        </nav>
-        <hr>
-        <p>Welcome, I'm Patrick.</p>
-        <p>Thanks for visiting my website.</p>
+        <p>Hello, world! Thanks for visiting my website.</p>
 </body>
 </html>
